# observer

./: .env.example  .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  chapter_2.html  chapter_3.html  contributing.html  docker-compose.yml  index.html  justfile  observer.toml.example  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-dc7ec431.js  searchindex-ee84ad1b.js  searchindex-f513556d.js  searchindex-f69ef9e9.js  toc-0b1607c5.js  toc-3fa54c7d.js  toc-751a9ead.js  toc-989fdf95.js  toc-c7b58e43.js  toc.html
.github/: dependabot.yml
.github/workflows/: audit.yml  docs.yml  prerelease.yml  release.yml  test.yml
benches/: metrics.rs
bins/aio/: Cargo.toml
bins/client/: Cargo.toml  build.rs
bins/client/benches/: metrics.rs  storage_engine.rs
bins/client/migration/: Cargo.toml
bins/client/migration/src/: lib.rs  m20260712_221402_cpu_stas.rs  m20260712_221402_cpu_stats.rs  m20260713_143522_container_runtime_stats.rs  m20260713_143538_disk_stats.rs  m20260713_143549_memory_stats.rs  m20260713_143558_network_stats.rs  m20260713_143612_process_stats.rs  m20260713_143619_speedtest_stats.rs  m20260713_143634_system_stats.rs
bins/client/migrations/: 0001_create_cpu_table.sql
bins/client/proto/: host-metrics.proto  metrics.proto
bins/client/proto/observer/v1/: base_conn.proto  metrics_tunnel.proto
bins/client/proto/observer/v1/metrics/: container_runtime.proto  cpu.proto  disk.proto  memory.proto  network.proto  process.proto  speedtest.proto  system.proto
bins/client/src/: config.rs  lib.rs  logging.rs  main.rs  metrics_sender.rs  scheduler.rs  scheduling_master.rs  system_health.rs
bins/client/src/client/: metric_collection_errors.rs  mod.rs
bins/client/src/client/docker/: collector.rs  docker_job.rs  docker_metric_sender.rs  mod.rs
bins/client/src/client/host/: command_polling.rs  speedtest.rs  system_metric_collection.rs  system_metric_sender.rs
bins/client/src/client/host/collectors/: disk.rs
bins/client/src/data_storage/: bin_store.rs  entries.rs  error.rs  mod.rs  serializer.rs  storage_engine.rs  storage_handler.rs
bins/client/src/data_storage/file_format/: block.rs  error.rs  header.rs  metrics_file.rs  mod.rs
bins/client/src/db/: database.rs
bins/client/src/db/model/: cpu.rs
bins/client/src/entities/: container_runtime_stats.rs  container_stats.rs  cpu_core_stats.rs  cpu_stats.rs  disk_entry.rs  disk_stats.rs  memory_stats.rs  mod.rs  network_stats.rs  prelude.rs  process_stats.rs  processes_stats.rs  speedtest_stats.rs  system_stats.rs
bins/client/src/grpc/: client.rs  mod.rs  proto_handler.rs  proto_mapper.rs  sender.rs  transmission_handler.rs
bins/client/src/grpc/v1/: client.rs  metrics_mapping.rs  metrics_tunnel.rs  mod.rs
bins/client/src/grpc/v1/metrics/: mod.rs  server.rs
bins/client/src/jobs/: base_metric_collection_job.rs  container_stats_collection_job.rs  data_cleanup_job.rs  mod.rs  speedtest_stats_collection_job.rs
bins/client/src/mapper/: docker_metrics_mapper.rs  host_metrics_mapper.rs  mod.rs
bins/client/src/mapper/docker_metrics_models/: mapped_docker_metrics.rs  mod.rs
bins/client/src/mapper/host_metrics_models/: disk_info.rs  mapped_host_system_metrics.rs  mod.rs  speed_test_result.rs
bins/client/src/notification/: mod.rs  notification_handler.rs  notification_manager.rs
bins/client/src/scheduling/: collection_error.rs  job.rs  mod.rs  scheduler.rs  scheduling_master.rs
bins/client/src/sender/: host_system_metrics_sender.rs  metrics_sender.rs  mod.rs
bins/client/src/storage_engine/: mod.rs  storage_engine.rs
bins/client/src/subsystem/: base_metrics.rs  base_metrics_system.rs  container_stats_system.rs  docker_metrics_collector.rs  host_metrics_collector.rs  mod.rs  speedtest.rs
crates/client/src/: lib.rs  system_health.rs
crates/docker-socket/: Cargo.toml
crates/mimir/: Cargo.toml  README.md
crates/mimir/src/: lib.rs
crates/mimir/src/format/v1/: block.rs  bmf_file.rs  bmf_storage.rs  footer.rs  header.rs  mod.rs
crates/observer/: Cargo.toml
crates/observer/src/: config.rs  main.rs
crates/observer/src/client/: metric_collection.rs  scheduler.rs  speedtest.rs
crates/observer/src/client/collectors/: disk.rs
crates/observer/src/client/docker/: docker_metric_sender.rs  metric_collection.rs  mod.rs
crates/observer/src/client/host/: metric_collection.rs  scheduler.rs
crates/open-eye/: Cargo.toml  README.md
crates/open-eye/src/: lib.rs  load_score.rs  logging.rs
crates/open-eye/src/collector/: mod.rs
crates/open-eye/src/collector/container_runtime/: collector.rs
crates/open-eye/src/collector/cpu/: collector.rs  types.rs
crates/open-eye/src/collector/disk/: collector.rs
crates/open-eye/src/collector/docker/: collector.rs
crates/open-eye/src/collector/memory/: collector.rs  types.rs
crates/open-eye/src/collector/network/: collector.rs
crates/open-eye/src/collector/processes/: collector.rs
crates/open-eye/src/collector/speedtest/: collector.rs
crates/open-eye/src/collector/systemstats/: collector.rs
docs/mdbook/: book.toml
docs/mdbook/src/: SUMMARY.md  chapter_1.md  chapter_2.md  chapter_3.md  contributing.md  index.md  remote-commands.md
docs/mdbook/theme/: custom.css
getting-started/: installation.html  pre-release-builds.html  useful-information.html
gpu-test/: main.py  pyproject.toml
proto/: metrics.proto
setup/: deploy-pre.sh  deploy.sh  docker-compose.test.yml  observer.openrc  observer.service
src/: app_health.rs  application_health.rs  config.rs  host_system_health.rs  lib.rs  main.rs  scheduler.rs  scheduling_master.rs  system_health.rs
src/client/: command_polling.rs  metric_collection.rs  metric_collection_errors.rs  mod.rs  scheduler.rs  sender.rs  speedtest.rs
src/client/collectors/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
src/client/docker/: collector.rs  docker_job.rs  docker_metric_sender.rs  metric_collection.rs  mod.rs
src/client/host/: command_polling.rs  metric_collection.rs  mod.rs  scheduler.rs  speedtest.rs  (+2 more)
theme/: custom-a62c9976.css  custom-a6d3a2ab.css
(+17 files in other folders)
