[package]
name = "observer"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
sysinfo = "0.38.2"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3.32"
