[package]
name = "observer"
version = "1.1.8"
edition = "2024"

# criterion runs benchmarks and generates html timing reports
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

# tells cargo about our bench file, harness=false means criterion manages the runner
[[bench]]
name = "metrics"
harness = false

[dependencies]
toml = "0.8"              # TOML parser
serde = { version = "1", features = ["derive"] }  # serialization framework
serde_json = "1"          # JSON serialization for HTTP payloads
log = "0.4"               # logging facade
env_logger = "0.11"       # logger backend, reads RUST_LOG env var
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }  # async runtime
sysinfo = "0.38.2"        # cpu, ram, disk, temperature metrics
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json", "http2"], default-features = false }  # http client, rustls-tls avoids needing openssl
futures-util = "0.3.32"   # stream helpers for reqwest responses
local-ip-address = "0.6"  # local IP address lookup
chrono = { version = "0.4.44", features = ["serde"] }
