[package]
name = "observer"
version = "1.2.7"
edition = "2024"

[[bin]]
name = "observer"
path = "src/main.rs"

# criterion runs benchmarks and generates html timing reports
[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

# tells cargo about our bench file, harness=false means criterion manages the runner
[[bench]]
name = "metrics"
harness = false

[dependencies]
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
sysinfo = "0.38.4"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json", "http2"], default-features = false }
futures-util = "0.3.32"
docker-api = "0.14"
local-ip-address = "0.6"
chrono = { version = "0.4.44", features = ["serde"] }
