[package]
name = "observer-client"
version = "1.2.5"
edition = "2024"

[lints.rust]
unused = "allow"

[[bin]]
name = "observer_client"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }

#[[bench]]
#name = "storage_engine"
#harness = false

[dependencies]
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
sysinfo = "0.38.4"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json", "http2"], default-features = false }
chrono = { version = "0.4.44", features = ["serde"] }
open-eye = { path = "../../crates/open-eye" }
tynm = "0.2.0"
rmp-serde = "1.3.1"
crc32fast = "1.5.0"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }

migration = { path = "migration" }

prost = "0.14"# protobuf message serialization/deserialization
prost-types = "0.14"# well-known proto types (e.g. Timestamp)
tonic = { version = "0.14", features = ["tls-native-roots"] }# gRPC runtime: transports, service traits, request/response wrappers
tokio-stream = { version = "0.1", features = ["net"] }# async stream utilities used by gRPC bidi streaming
tonic-prost = "0.14"# ProstCodec used by the generated client/server stubs to encode proto messages over gRPC
erased-serde = "0.4.10"




[build-dependencies]
tonic-prost-build = "0.14.5"# generates Rust structs and gRPC service stubs from .proto files at build time
protoc-bin-vendored = "3"# bundles a precompiled protoc binary so no system protoc install is needed
