[package]
name = "mimir"
version = "0.1.0"
description = "Binary storage backend for observer"
repository = "https://github.com/ObServe-Your-Server/observer/tree/standalone/crates/mimir"
edition = "2024"
keywords = ["observe", "system", "metrics", "storage", "binary"]
homepage = "https://observe.vision"
readme = "README.md"
authors = ["Marco Brandt mail@marco-brandt.com"]
license-file = "../../LICENSE"


[lib]
name = "mimir"
path = "src/lib.rs"

[dependencies]
